--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="EXT:cf_cookiemanager/Resources/Private/Language/locallang_db.xlf" date="2023-01-18T19:36:11Z" product-name="cf_cookiemanager">
+	<file source-language="en" datatype="plaintext" original="EXT:cf_cookiemanager/Resources/Private/Language/locallang_db.xlf" date="2023-02-09T17:15:23Z" product-name="cf_cookiemanager">
 		<header/>
 		<body>
 			<trans-unit id="tx_cfcookiemanager_domain_model_cookie" resname="tx_cfcookiemanager_domain_model_cookie">
@@ -227,6 +227,39 @@
 			</trans-unit>
 			<trans-unit id="tx_cfcookiemanager_domain_model_variables.value" resname="tx_cfcookiemanager_domain_model_variables.value">
 				<source>Value</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans" resname="tx_cfcookiemanager_domain_model_scans">
+				<source>Scans</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.domain" resname="tx_cfcookiemanager_domain_model_scans.domain">
+				<source>Domain</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.click_consent" resname="tx_cfcookiemanager_domain_model_scans.click_consent">
+				<source>Click Consent</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.consent_xpath" resname="tx_cfcookiemanager_domain_model_scans.consent_xpath">
+				<source>Consent Xpath</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.provider" resname="tx_cfcookiemanager_domain_model_scans.provider">
+				<source>Provider</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.unknownprovider" resname="tx_cfcookiemanager_domain_model_scans.unknownprovider">
+				<source>Unknownprovider</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.cookies" resname="tx_cfcookiemanager_domain_model_scans.cookies">
+				<source>Cookies</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.scanned_sites" resname="tx_cfcookiemanager_domain_model_scans.scanned_sites">
+				<source>Scanned Sites</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.max_sites" resname="tx_cfcookiemanager_domain_model_scans.max_sites">
+				<source>Max Sites</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.identifier" resname="tx_cfcookiemanager_domain_model_scans.identifier">
+				<source>Identifier</source>
+			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_scans.status" resname="tx_cfcookiemanager_domain_model_scans.status">
+				<source>Status</source>
 			</trans-unit>
 			<trans-unit id="tx_cf_cookiemanager_cookiefrontend.name" resname="tx_cf_cookiemanager_cookiefrontend.name">
 				<source>CookieFrontend</source>
