--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -135,6 +135,9 @@
 			<trans-unit id="tx_cfcookiemanager_domain_model_cookiefrontend.description_consent_modal" resname="tx_cfcookiemanager_domain_model_cookiefrontend.description_consent_modal">
 				<source>Consent Modal Description</source>
 			</trans-unit>
+			<trans-unit id="tx_cfcookiemanager_domain_model_cookiefrontend.revision_text" resname="tx_cfcookiemanager_domain_model_cookiefrontend.revision_text">
+				<source>Revision Text (Displayed on bottom)</source>
+			</trans-unit>
 			<trans-unit id="tx_cfcookiemanager_domain_model_cookiefrontend.primary_btn_text_consent_modal" resname="tx_cfcookiemanager_domain_model_cookiefrontend.primary_btn_text_consent_modal">
 				<source>Consent Modal Accept button text</source>
 			</trans-unit>
