[Task] Added a Fluid-Template for the Script-Blocker.

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -24,6 +24,9 @@
             <trans-unit id="frontend_cookie_description" resname="frontend_cookie_description">
                 <source>Description</source>
             </trans-unit>
+            <trans-unit id="scriptblocked" resname="scriptblocked">
+                <source>Service blocked by Script-blocker</source>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
