--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -31,6 +31,10 @@
                  <source>Description</source>
                  <target>Beschreibung</target>
              </trans-unit>
+             <trans-unit id="scriptblocked" xml:space="preserve" >
+                 <source>Service blocked by Script-blocker</source>
+                 <target>Dieser Service wurde von dem Scriptblocker blockiert</target>
+             </trans-unit>
         </body>
     </file>
 </xliff>
