[TASK] Renamed new Services Fields #55

--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -46,10 +46,10 @@
 				<source>Description</source>
 			</trans-unit>
             <trans-unit id="tx_cfcookiemanager_domain_model_cookieservice.is_required" resname="tx_cfcookiemanager_domain_model_cookieservice.is_required">
-                <source>Is Required / checked by default</source>
+                <source>Checked by default / opt-out</source>
             </trans-unit>
             <trans-unit id="tx_cfcookiemanager_domain_model_cookieservice.is_readonly" resname="tx_cfcookiemanager_domain_model_cookieservice.is_readonly">
-                <source>Is Readonly (Can't be disabled in Frontend)</source>
+                <source>Readonly / required</source>
             </trans-unit>
 			<trans-unit id="tx_cfcookiemanager_domain_model_cookieservice.provider" resname="tx_cfcookiemanager_domain_model_cookieservice.provider">
 				<source>Provider</source>
